Update project to latest tag old-cryptolibrary-2.0.0